--- a/javascript-challenge.html
+++ b/javascript-challenge.html
@@ -71,8 +71,13 @@
     <section class="example">
       <h2>Linked Checkboxes</h2>
       TODO
+      <div kjs-role='checkbox'>
+          <label><input type="checkbox" kjs-role="check" />Todo1<input type="checkbox" kjs-role="control"  /></label>
+          <label><input type="checkbox" kjs-role="check" />Todo2<input type="checkbox" kjs-role="control"  /></label>
+          <label><input type="checkbox" kjs-role="check" />Todo3<input type="checkbox" kjs-role="control"  /></label>
+          <label><input type="checkbox" kjs-role="check" />Todo4<input type="checkbox" kjs-role="control"  /></label>
+      </div>
     </section>
-
   </body>
 
 </html>
