updates on checkbox.js

--- a/javascript-challenge.html
+++ b/javascript-challenge.html
@@ -70,18 +70,17 @@
 
     <section class="example">
       <h2>Linked Checkboxes</h2>
-      <div kjs-type="checkbox" >
+      <div kjs-type="checkbox">
+        <div>
           <label><input type="checkbox" kjs-role="checkbox"  kjs-id="1"/>Todo1</label>
           <label><input type="checkbox" kjs-role="checkbox" kjs-handle-id="1" />Todo2</label>
           <label><input type="checkbox" kjs-role="checkbox" kjs-id="2"/>Todo3</label>
           <label><input type="checkbox" kjs-role="checkbox" kjs-handle-id="2"/>Todo4</label>
       </div>
       <div>
-        <label><input type="checkbox" kjs-role="Control" />Control1</label>
-        <label><input type="checkbox" kjs-role="Control" />Control2</label>
-        <label><input type="checkbox" kjs-role="Control" />Control3</label>
-        <label><input type="checkbox" kjs-role="Control" />Control4</label>
+        Might Add Later :)
     </div>
+      </div>      
     </section>
   </body>
 </html>
