putting the logic together

--- a/javascript-challenge.html
+++ b/javascript-challenge.html
@@ -70,16 +70,14 @@
 
     <section class="example">
       <h2>Linked Checkboxes</h2>
-      <div kjs-type="checkbox">
+      <div kjs-type="checkbox" >
         <div>
-          <label><input type="checkbox" kjs-role="checkbox"  kjs-id="1"/>Todo1</label>
-          <label><input type="checkbox" kjs-role="checkbox" kjs-handle-id="1" />Todo2</label>
-          <label><input type="checkbox" kjs-role="checkbox" kjs-id="2"/>Todo3</label>
-          <label><input type="checkbox" kjs-role="checkbox" kjs-handle-id="2"/>Todo4</label>
+          <label><input type="checkbox" kjs-role="selected" id="1" />Main</label>
+          <label><input type="checkbox" kjs-role="checkbox" />Todo1</label>
+          <label><input type="checkbox" kjs-role="checkbox" />Todo2</label>
+          <label><input type="checkbox" kjs-role="checkbox" />Todo3</label>
+          <label><input type="checkbox" kjs-role="checkbox" />Todo4</label>
       </div>
-      <div>
-        Might Add Later :)
-    </div>
       </div>      
     </section>
   </body>
