--- a/javascript-challenge.html
+++ b/javascript-challenge.html
@@ -72,11 +72,11 @@
       <h2>Linked Checkboxes</h2>
       <div kjs-type="checkbox" >
         <div>
-          <label><input type="checkbox" kjs-role="selected" id="1" />Main</label>
-          <label><input type="checkbox" kjs-role="checkbox" />Todo1</label>
-          <label><input type="checkbox" kjs-role="checkbox" />Todo2</label>
-          <label><input type="checkbox" kjs-role="checkbox" />Todo3</label>
-          <label><input type="checkbox" kjs-role="checkbox" />Todo4</label>
+          <label><input type="checkbox" kjs-role="checkmark" id="control" />Main</label>
+          <label><input type="checkbox" kjs-role="checkmark" id="check"/>Todo1</label>
+          <label><input type="checkbox" kjs-role="checkmark" id="check"/>Todo2</label>
+          <label><input type="checkbox" kjs-role="checkmark" id="check"/>Todo3</label>
+          <label><input type="checkbox" kjs-role="checkmark" id="check"/>Todo4</label>
       </div>
       </div>      
     </section>
