--- a/javascript-challenge.html
+++ b/javascript-challenge.html
@@ -72,11 +72,11 @@
       <h2>Linked Checkboxes</h2>
       <div kjs-type="checkbox" >
         <div>
-          <label><input type="checkbox" kjs-role="checkmark" id="control" />Main</label>
-          <label><input type="checkbox" kjs-role="checkmark" id="check"/>Todo1</label>
-          <label><input type="checkbox" kjs-role="checkmark" id="check"/>Todo2</label>
-          <label><input type="checkbox" kjs-role="checkmark" id="check"/>Todo3</label>
-          <label><input type="checkbox" kjs-role="checkmark" id="check"/>Todo4</label>
+          <label><input type="checkbox" kjs-role="checkmark" id="control"  />Main</label>
+          <label><input type="checkbox" kjs-role="checkmark" id="check" value="1"/>Todo1</label>
+          <label><input type="checkbox" kjs-role="checkmark" id="check" value="2"/>Todo2</label>
+          <label><input type="checkbox" kjs-role="checkmark" id="check" value="3"/>Todo3</label>
+          <label><input type="checkbox" kjs-role="checkmark" id="check" value="4"/>Todo4</label>
       </div>
       </div>      
     </section>
