updates on indeterminateStage

--- a/javascript-challenge.html
+++ b/javascript-challenge.html
@@ -73,10 +73,10 @@
       <div kjs-type="checkbox" >
         <div>
           <label><input type="checkbox" kjs-role="checkmark" id="control"  />Main</label>
-          <label><input type="checkbox" kjs-role="checkmark" id="check" value="1"/>Todo1</label>
-          <label><input type="checkbox" kjs-role="checkmark" id="check" value="2"/>Todo2</label>
-          <label><input type="checkbox" kjs-role="checkmark" id="check" value="3"/>Todo3</label>
-          <label><input type="checkbox" kjs-role="checkmark" id="check" value="4"/>Todo4</label>
+          <label><input type="checkbox" kjs-role="checkmark" id="check1" value="1"/>Todo1</label>
+          <label><input type="checkbox" kjs-role="checkmark" id="check2" value="2"/>Todo2</label>
+          <label><input type="checkbox" kjs-role="checkmark" id="check3" value="3"/>Todo3</label>
+          <label><input type="checkbox" kjs-role="checkmark" id="check4" value="4"/>Todo4</label>
       </div>
       </div>      
     </section>
