changed HTML file, updated the checkboxjs file

--- a/javascript-challenge.html
+++ b/javascript-challenge.html
@@ -72,11 +72,11 @@
       <h2>Linked Checkboxes</h2>
       <div kjs-type="checkbox" >
         <div>
-          <label><input type="checkbox" kjs-role="checkmark" id="control"  />Main</label>
-          <label><input type="checkbox" kjs-role="checkmark" id="check1" value="1"/>Todo1</label>
-          <label><input type="checkbox" kjs-role="checkmark" id="check2" value="2"/>Todo2</label>
-          <label><input type="checkbox" kjs-role="checkmark" id="check3" value="3"/>Todo3</label>
-          <label><input type="checkbox" kjs-role="checkmark" id="check4" value="4"/>Todo4</label>
+          <label class="check"><input type="checkbox" kjs-role="checkmark" id="control"  />Select All</label>
+          <label class="check"><input type="checkbox" kjs-role="checkmark" id="check1" value="1"/>Take Trash</label>
+          <label class="check"><input type="checkbox" kjs-role="checkmark" id="check2" value="2"/>Get Groceries</label>
+          <label class="check"><input type="checkbox" kjs-role="checkmark" id="check3" value="3"/>Go Fishing</label>
+          <label class="check"><input type="checkbox" kjs-role="checkmark" id="check4" value="4"/>Walk Dogs</label>
       </div>
       </div>      
     </section>
