--- a/javascript-challenge.html
+++ b/javascript-challenge.html
@@ -72,11 +72,11 @@
       <h2>Linked Checkboxes</h2>
       <div kjs-type="checkbox" >
         <div>
-          <label class="check"><input type="checkbox" kjs-role="checkmark" id="control"  />Select All</label>
-          <label class="check"><input type="checkbox" kjs-role="checkmark" id="check1" value="1"/>Take Trash</label>
-          <label class="check"><input type="checkbox" kjs-role="checkmark" id="check2" value="2"/>Get Groceries</label>
-          <label class="check"><input type="checkbox" kjs-role="checkmark" id="check3" value="3"/>Go Fishing</label>
-          <label class="check"><input type="checkbox" kjs-role="checkmark" id="check4" value="4"/>Walk Dogs</label>
+          <label for="control"><input type="checkbox" kjs-role="checkmark" id="control"  />Select All</label>
+          <label for="check1"><input type="checkbox" kjs-role="checkmark" id="check1" />Take Trash</label>
+          <label for="check2"><input type="checkbox" kjs-role="checkmark" id="check2" />Get Groceries</label>
+          <label for="check3"><input type="checkbox" kjs-role="checkmark" id="check3" />Go Fishing</label>
+          <label for="check4"><input type="checkbox" kjs-role="checkmark" id="check4" />Walk Dogs</label>
       </div>
       </div>      
     </section>
